--- a/GenericListTesting/GenericListTesting.csproj
+++ b/GenericListTesting/GenericListTesting.csproj
@@ -49,8 +49,11 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GenericListTests.cs" />
+    <Compile Include="AddTesting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RemoveTesting.cs" />
+    <Compile Include="OperatorTesting.cs" />
+    <Compile Include="ToStringTesting.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
