Finished Add() method and it passes all unit tests, indexer property is now updated properly to throw indexOutOfRangeException

--- a/GenericListTesting/GenericListTesting.csproj
+++ b/GenericListTesting/GenericListTesting.csproj
@@ -54,6 +54,7 @@
     <Compile Include="RemoveTesting.cs" />
     <Compile Include="OperatorTesting.cs" />
     <Compile Include="ToStringTesting.cs" />
+    <Compile Include="ZipTesting.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
