Added Quicksort() which sorts string and int lists only. Added Contains() and GetIndexAt() which returns -1 if it can't find index of item.

--- a/GenericList/GenericList.csproj
+++ b/GenericList/GenericList.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GenericCompareTo.cs" />
     <Compile Include="GenericList.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
