--- a/GenericListTesting/GenericListTesting.csproj
+++ b/GenericListTesting/GenericListTesting.csproj
@@ -54,6 +54,7 @@
     <Compile Include="RemoveTesting.cs" />
     <Compile Include="OperatorTesting.cs" />
     <Compile Include="ToStringTesting.cs" />
+    <Compile Include="VariousTesting.cs" />
     <Compile Include="ZipTesting.cs" />
   </ItemGroup>
   <ItemGroup>
